<resources>
    <string name="app_name">healthtrack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Главная</string>
    <string name="nav_stat">Статистика</string>
    <string name="nav_treatments">Мои лечения</string>
    <string name="nav_chat">Чат</string>
    <string name="nav_sync">Синхронизация</string>
    <string name="nav_logout">Выйти</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Главная</item>
        <item>Статистика</item>
        <item>Мои лечения</item>
        <item>Чат</item>
        <item>Синхронизация</item>
        <item>Выйти</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
</resources>
