<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_stat"
            android:icon="@drawable/ic_graph_black_18dp"
            android:title="@string/nav_stat" />
        <item
            android:id="@+id/nav_treatment"
            android:icon="@drawable/ic_list_black_18dp"
            android:title="@string/nav_treatments" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat_black_18dp"
            android:title="@string/nav_chat" />

        <item
            android:id="@+id/nav_sync"
            android:icon="@drawable/ic_sync_black_18dp"
            android:title="@string/nav_sync" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>